[wip] create model_generator

--- a/lib/generators/infold/templates/model.rb.tt
+++ b/lib/generators/infold/templates/model.rb.tt
@@ -1,1 +1,11 @@
-aaa
+<%# encoding: utf-8 -%>
+module Admin
+  class <%= @writer.table.model_name %> < ::<%= @writer.table.model_name %>
+  <%- if @writer.table.has_datetime_column? -%>
+    include DatetimeFieldConcern
+
+  <%- end -%>
+    <%= @writer.association_code %>
+    <%= @writer.validation_code %>
+  end
+end
