--- a/lib/generators/infold/templates/model.rb.tt
+++ b/lib/generators/infold/templates/model.rb.tt
@@ -1,7 +1,7 @@
 <%# encoding: utf-8 -%>
 module Admin
   class <%= @writer.model_name %> < ::<%= @writer.model_name %>
-  <%- if @writer.self_table.datetime_columns.present? -%>
+  <%- if @writer.resource.self_table.datetime_columns.present? -%>
     include DatetimeFieldConcern
 
     <%= @writer.datetime_field_code&.gsub('[TAB]', '  ') %>
