--- a/lib/generators/infold/templates/decorator.rb.tt
+++ b/lib/generators/infold/templates/decorator.rb.tt
@@ -1,6 +1,6 @@
 <%# encoding: utf-8 -%>
 module Admin
-  module <%= @writer.model_name %>Decorator
+  module <%= @writer.resource_name(:model) %>Decorator
     <%= @writer.decorator_code&.gsub('[TAB]', '  ') %>
   end
 end
